fix: image index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -150,7 +150,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
 >
     <main>
         <section class="one">
-            <img class="w-full h-[100vh] object-cover" src="https://cdn.omarortegamx.com.mx/portada-ooa-prd-web-2025.png" alt="">
+            <img class="w-full lg:h-[100vh] object-cover" src="https://cdn.omarortegamx.com.mx/portada-ooa-prd-web-2025.png" alt="">
         </section>
 
         <section>
