fix: image-sobre mi

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -166,7 +166,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
                 </div>
                 <div class="flex flex-col lg:flex lg:flex-row my-6">
                     <div class="basis-1/2">
-                        <img src={aboutImage.src} alt="" />
+                        <img src="https://cdn.omarortegamx.com.mx/foto-sobre.mi-ooa-prd.jpeg" alt="" />
                     </div>
                     <div class="basis-1/2 space-y-6 my-auto px-4">
                         <h3 class="text-4xl font-semibold mt-6 lg:mt-0">
